[add]デプロイのビルド&起動用のスクリプト作成
.gitignore: コンテナ用.envとvolumesの追加
compose.yml: 新しく追加、デプロイ用
deploy-rebuild.sh: 追加
README.md: env関連追加
go-api/Dockerfile: シングルステージビルド形式で、デプロイ用ステージのみ追加

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 # docker-composeで使う.env
 .env
+*.env*
 
 # memo
 memo.txt
@@ -8,3 +9,5 @@ memo.txt
 .vscode/
 
 # volumes
+go-api/ddd/
+mysql-db/db_data/
