--- a/compose.yml
+++ b/compose.yml
@@ -5,20 +5,15 @@ services:  # コンポースするサービスたち
         build:  # ビルド設定
             context: ./go-api  # ビルドプロセスが実行されるパス
             dockerfile: Dockerfile  # Dockerfileのパス
-        image: ddd-go-api:latest # image name
-        ports: # ホストマシンのポートとコンテナのポートをマッピング 
-            - "4561:4561" # ホストマシンのポートとコンテナのポートをマッピング
+        image: ddd_go_api:latest # image name
         environment: # 環境変数
             TZ: ${TZ}
         tty: true # コンテナ内で対話的操作を可能
 
     mysql-db-srv: # サービスの名前
         container_name: mysql-db # コンテナ名
-        # build: # ビルド設定
-        #     context: .
-        #     dockerfile: ./mysql_server/Dockerfile
         image: mysql:latest  # pullするイメージ
-        volumes:
+        volumes: # ボリュームの保持。
             - ./mysql-db/db_data:/var/lib/mysql
         environment: # 環境変数
             TZ: ${TZ}
