--- a/compose.deploy.yml
+++ b/compose.deploy.yml
@@ -3,5 +3,6 @@ services:  # コンポースするサービスたち
     go-api-srv:  # サービスの名前
         build:
            target: deploy-final
+        image: ddd_go_api:latest # image name
         ports: # ホストマシンのポートとコンテナのポートをマッピング 
             - "4561:4561" # ホストマシンのポートとコンテナのポートをマッピング
