--- a/compose.yml
+++ b/compose.yml
@@ -8,6 +8,9 @@ services:  # コンポースするサービスたち
         environment: # 環境変数
             TZ: ${TZ}
         tty: true # コンテナ内で対話的操作を可能
+        networks: # 定義したネットワークを利用
+            - db_net # dbに接続するネットワーク
+
 
     mysql-db-srv: # サービスの名前
         container_name: mysql-db # コンテナ名
@@ -19,4 +22,8 @@ services:  # コンポースするサービスたち
         env_file: # 環境変数のまとまりをファイルに記述して渡す
             - .env.mysql-db-srv
         restart: always  # コンテナの再起動
+        networks: # 定義したネットワークを利用
+            - db_net # dbに接続するネットワーク
 
+networks: # ネットワークの定義
+    db_net: # dbに接続するネットワーク
