[fix]SSH通信用のコンテナが動かない問題を解消
compose.develop.yml: 名前付きボリュームでソケットをコンテナ間共有, ソケットのパスを設定, ssh-agent用のネットワーク
go-api/Dockerfile: clientをインストール, 不要になったパスワード変更やsshのパスワード接続設定を削除
ssh-agent/Dockerfile: 不要になったserverやsshpassを削除、srvの指定も削除しinit.shで使うsocketの変数設定
execute.sh: sshd削除
init.sh: ssh-agentをソケットの場所を指定して起動, trapで停止シグナルのハンドル

--- a/ssh-agent/Dockerfile
+++ b/ssh-agent/Dockerfile
@@ -5,12 +5,13 @@ FROM debian:bullseye-slim AS builder
 WORKDIR /root/ssh-agent
 
 # ssh接続用のライブラリをインストール
-RUN apt-get update \
-    && apt-get install -y openssh-server sshpass
+RUN apt-get update && \
+    # ssh-agentはopenssh-clientに含まれてて、ssh-agentを使ってSSH接続したいコンテナのための鍵管理を行う
+    apt-get install -y openssh-client
 
-# 起動用スクリプトに渡す値を定義
-ENV CONTAINER_NAME go-api-srv
-ENV CONTAINER_PASS_FOR_SSH_AGENT=${CONTAINER_PASS_FOR_SSH_AGENT}
+# compose.ymlから値を受け取り、エントリーポイントで使う環境変数に定義
+ARG SSH_AUTH_SOCK
+ENV SSH_AUTH_SOCK_PATH=${SSH_AUTH_SOCK}
 
 # 起動用スクリプトをコピー
 COPY ./init.sh ./
