--- a/compose.develop.yml
+++ b/compose.develop.yml
@@ -5,11 +5,18 @@ services:  # コンポースするサービスたち
             target: develop
             args: # ビルド時の変数
                 CONTAINER_PASS_FOR_SSH_AGENT: ${CONTAINER_PASS_FOR_SSH_AGENT:-password}
-        volumes:  # ボリュームの保持。
+        volumes: # ボリュームの保持
             - "./go-api/ddd:/root/ddd" # 開発環境
             - "./go-api/log/:/root/log/" # log
+            - "ssh-agent-socket:/root/ssh_agent_socket" # SSHエージェントソケットを名前付きボリュームでコンテナ間共有
+        environment: # 環境変数
+            SSH_AUTH_SOCK: /root/ssh_agent_socket/ssh-agent.sock
         ports: # ホストマシンのポートとコンテナのポートをマッピング 
             - "4561:4561"
+        tty: true # 仮想端末(:ターミナル)をコンテナに提供し、コンテナ内で対話的操作を可能にする # なお、ttyを設定しても、compose.services.service.commandやDockerfile.CMD, ENTRYPOINTでプロセスを指定している場合はそれが終了してしまうと継続できない
+        stdin_open: true # コンテナの標準入力の受付オプション、ターミナルで対話できる
+        depends_on: # コンテナ起動順の関係 
+            - ssh-agent-srv # sshしたいコンテナを先に立ち上げる
         networks: # 定義したネットワークを利用
             - ssh_net # SSHしたいコンテナ間でのネットワーク
 
@@ -20,20 +27,24 @@ services:  # コンポースするサービスたち
     ssh-agent-srv: # サービス名
         container_name: ssh-agent # コンテナ名
         build:  # ビルド設定
-            context: ./ssh-agent # ビルドプロセスが実行されるパス。
-            dockerfile: Dockerfile  # Dockerfileのパス。
-        volumes: # ssh keyをマウント
-            - type: bind # short syntaxは、もしホストOSにsourceがなかったら、"ディレクトリ"を作ってしまう
-              source: "${HOST_SSH_PATH}"
+            context: ./ssh-agent # ビルドプロセスが実行されるパス
+            dockerfile: Dockerfile  # Dockerfileのパス
+            args: # ビルド時の変数
+                SSH_AUTH_SOCK: /root/ssh-agent/ssh_agent_socket/ssh-agent.sock
+        volumes: # ボリュームの保持
+            - type: bind  # ssh keyをホストボリュームでホストバインドマウント # short syntaxは、もしホストOSにsourceがなかったら、"ディレクトリ"を作ってしまう
+              source: "${HOST_SSH_PATH:-~/.ssh}"
               target: "/root/.ssh/"
-        environment: # 環境変数
-            CONTAINER_PASS_FOR_SSH_AGENT: ${CONTAINER_PASS_FOR_SSH_AGENT:-password}
-        depends_on: # コンテナ起動順の関係 
-            - go-api-srv # sshしたいコンテナを先に立ち上げる
-        tty: true # コンテナ内で対話的操作を可能
+              read_only: true
+            - "ssh-agent-socket:/root/ssh-agent/ssh_agent_socket" # SSHエージェントソケットを名前付きボリュームでコンテナ間共有
+        tty: true # 仮想端末(:ターミナル)をコンテナに提供し、コンテナ内で対話的操作を可能にする
+        stdin_open: true # コンテナの標準入力の受付オプション、ターミナルで対話できる
         restart: always  # コンテナの再起動
         networks: # 定義したネットワークを利用
             - ssh_net # SSHしたいコンテナ間でのネットワーク
+
+volumes: # 名前付きボリュームの定義
+    ssh-agent-socket: # SSHエージェントソケットを名前付きボリュームでコンテナ間共有
 
 networks: # ネットワークの定義
     ssh_net: # SSHしたいコンテナ間でのネットワーク
