[update]composeディレクトリ内を一通り修正、伴ってREADME.mdの修正

--- a/compose/compose.yml
+++ b/compose/compose.yml
@@ -1,9 +1,9 @@
 services:  # コンポースするサービスたち
 
     go-api-srv:  # サービスの名前
-        container_name: go-api # コンテナ名
+        container_name: ddd_go-api  # コンテナ名
         build:  # ビルド設定
-            context: ./go-api  # ビルドプロセスが実行されるパス
+            context: ../service/go-api/ # ビルドプロセスが実行されるパス
             dockerfile: Dockerfile  # Dockerfileのパス
         environment: # 環境変数
             TZ: ${TZ}
@@ -11,18 +11,16 @@ services:  # コンポースするサービスたち
             mysql-db-srv:
                 condition: service_healthy # ヘルスチェック
         networks: # 定義したネットワークを利用
-            - db_net # dbに接続するネットワーク
+            - ddd_db-net # dbに接続するネットワーク
 
 
     mysql-db-srv: # サービスの名前
-        container_name: mysql-db # コンテナ名
+        container_name: ddd_mysql-db # コンテナ名
         image: mysql:latest  # pullするイメージ
-        volumes: # ボリュームの保持。
-            - ./mysql-db/db_data:/var/lib/mysql
         environment: # 環境変数
             TZ: ${TZ}
         env_file: # 環境変数のまとまりをファイルに記述して渡す
-            - .env.mysql-db-srv
+            - ../service/mysql-db/.env.mysql-db
         healthcheck:   # ヘルスチェックの条件
             test: ["CMD", "mysqladmin", "ping", "-h", "127.0.0.1", "-u", "user", "-ppass"] # NONE, CMD, CMD-SHELL # CMDだと変数展開が不可なのでその場合CMD-SHELLかshell形式、environmentセクションで渡す変数(パスワードなど)で展開したいなら二連＄でエスケープ # localhostだと起動時の一時サービス(:socket connection)に接続する可能性があるようで、正式なサーバー(:network interfaceもlistenしている)に接続するために127.0.0.1を使うべきらしい
             interval: 10s # ヘルスチェックの間隔 default: 30s
@@ -31,7 +29,7 @@ services:  # コンポースするサービスたち
             retries: 4 # リトライ回数 default: 3
         restart: always  # コンテナの再起動
         networks: # 定義したネットワークを利用
-            - db_net # dbに接続するネットワーク
+            - ddd_db-net # dbに接続するネットワーク
 
 networks: # ネットワークの定義
-    db_net: # dbに接続するネットワーク
+    ddd_db-net: # dbに接続するネットワーク
