[update]ディレクトリ構成変更によるスクリプト起動を修正

--- a/compose/compose.deploy.yml
+++ b/compose/compose.deploy.yml
@@ -1,16 +1,14 @@
 services:  # コンポースするサービスたち
 
     go-api-srv:  # サービスの名前
-        container_name: juninry_dep_go-api  # コンテナ名
+        container_name: ddd_dep_go-api  # コンテナ名
         build: # ビルド設定
            target: deploy-final
         image: ddd/go-api:stable # image name
         volumes: # ボリュームの保持
-          - ../services/mysql-db/db_data:/var/lib/mysql # DBデータをホストに保持
+          - ../service/mysql-db/db_data:/var/lib/mysql # DBデータをホストに保持
         ports: # ホストマシンのポートとコンテナのポートをマッピング 
             - "${API_DEPLOY_HOST_PORT}:4561"
-        networks: # 定義したネットワークを利用
-            ddd_proxy-net: # リバースプロキシに接続するネットワーク
 
     mysql-db-srv: # サービス名
         container_name: ddd_dep_mysql-db # コンテナ名
