[update]Dockerfileや実行用スクリプト

--- a/service/go-api/Dockerfile
+++ b/service/go-api/Dockerfile
@@ -1,17 +1,26 @@
+# 開発用やビルド用の共通ステージ
+
+# Stage0: goの入ったイメージ
+FROM golang:1.22.2-bullseye AS base
+
+# aptでパッケージリストの更新とgitインストール
+RUN apt-get update && \
+    apt-get install -y git
+
 # 開発用のステージ
 
 # Stage1: 開発環境に必要なツールとソースを入れるベースイメージ
-FROM golang:1.22.2-bullseye AS develop
+FROM base AS develop
 
 # 作業ディレクトリ
 WORKDIR /root/copy
 
-# aptでパッケージリストの更新とgitインストール
-RUN apt update && \
-    apt install -y git openssh-client
-
-# デバッガインストール
-RUN go install github.com/go-delve/delve/cmd/dlv@latest
+# 必要なものインストール
+RUN \
+    # ssh通信のためのクライアント
+    apt-get install -y git openssh-client && \
+    # デバッガインストール
+    go install github.com/go-delve/delve/cmd/dlv@latest
 
 # 必要なファイルのコピー
 COPY .env.go-api .env
@@ -19,7 +28,7 @@ COPY .env.go-api .env
 # httpポートの公開 ここにクライアントがAPIを投げる
 EXPOSE 4561
 
-# 実行用のスクリプトあげる
+# 実行用のスクリプトをコピー
 COPY ./init.sh .
 RUN chmod +x ./init.sh
 
@@ -29,18 +38,15 @@ ENTRYPOINT [ "./init.sh" ]
 # デプロイ用のステージ
 
 # Stage1: ビルドのためにgoのイメージ
-FROM golang:1.22.2-bullseye AS deploy-builder
+FROM base AS deploy-builder
 
 # 作業ディレクトリ
-WORKDIR /root/ddd/
+WORKDIR /root/
 
 # ビルド処理
 RUN \
-    # 必要ツールのインストール
-    apt-get update && \
-    apt-get install -y git && \
     # ソースコードのクローン
-    git clone https://github.com/unSerori/ddd.git && \
+    git clone https://github.com/unSerori/ddd.git -b main && \
     # ビルド なお、deploy-builderイメージにgo実行環境が入ってるのでビルドツールのDLは不要
     cd ./ddd && \
     go build -o go-api
@@ -48,16 +54,18 @@ RUN \
 # Stage2: 公開用のための軽量debian
 FROM debian:bullseye-slim AS deploy-final
 
+# 作業ディレクトリ
+WORKDIR /usr/local/bin/
+
 # 成果物のコピー
-COPY --from=deploy-builder /root/ddd/ddd/go-api /usr/local/bin/go-api
+COPY --from=deploy-builder /root/ddd/go-api go-api
 # 実行に必要なファイルのコピー
-COPY .env.go-api /usr/local/bin/.env
+COPY .env.go-api .env
 
 # httpポートの公開 ここにクライアントがAPIを投げる
 EXPOSE 4561
 
 #ワンファイル化後のディレクトリ操作ハンドルミスのためのリカバリ ++++
-WORKDIR /usr/local/bin/
 RUN \
     # ディレクトリ存在確認
     mkdir -p ./common/logging && \
